# combo-bot

./: .gitignore  AGENTS.md  CLAUDE.md  CREDITS.md  LICENSE  README.md  config.example.json  config.testnet.json  pyproject.toml  requirements.txt  start.sh  启动机器人.command
.codegraph/: daemon.pid
.github/workflows/: test.yml
combo_bot/: anti_martingale.py  backtest.py  correlation.py  data.py  data_provider.py  deepseek.py  fill_events_manager.py  freshness.py  fusion_config.py  grid_engine.py  hsl.py  intent_journal.py  kill_switch.py  live.py  main.py  merger.py  ml_signal.py  monitor.py  optimize.py  protections.py  regime.py  risk.py  rust_adapter.py  rust_backtest.py  rust_multi_symbol.py  rust_optimize.py  sizing.py  strategy.py  trend_signal.py  types.py  vol_target.py
combo_bot/webui/: __init__.py  process_manager.py  server.py
combo_bot/webui/static/: app.js  style.css
combo_bot/webui/templates/: index.html
docs/: RUNBOOK.md
rust/: Cargo.toml  pyproject.toml
rust/src/: backtest.rs  closes.rs  ema.rs  entries.rs  lib.rs  multi_symbol.rs  orchestrator.rs  risk.rs  trailing.rs  types.rs  utils.rs
scripts/: backtest_anti_martingale.py  backtest_basket.py  observe_live.py
tests/: conftest.py  test_aggressive_mode.py  test_backtest.py  test_correlation.py  test_data_provider.py  test_fill_events_manager.py  test_freshness.py  test_fusion_config.py  test_fusion_integration.py  test_grid.py  test_hardstop.py  test_independent_findings.py  test_kelly_sizer.py  test_ledger_correctness.py  test_live_guards.py  test_live_startup_shutdown.py  test_merger.py  test_ml_signal.py  test_multi_symbol.py  test_optimize_multiobjective.py  test_position_accounting.py  test_protections.py  test_regime.py  test_risk.py  test_round_13.py  test_round_15.py  test_round_16.py  test_round_17.py  test_round_18.py  test_round_19.py  test_round_20.py  test_round_21.py  test_round_22.py  test_round_23.py  test_round_24.py  test_round_25.py  test_round_26.py  test_round_27.py  test_round_28.py  test_round_29.py  (+9 more)
